--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -166,7 +166,7 @@
 					<input type="checkbox" data-dtype="Boolean" name="data.trauma.list.{{displayName}}" value="{{status}}" {{checked status}}/>
 					<span>{{displayName}}</span>
 				</label>
-				{{#if (test @index "==" 3)}}
+				{{#if (test @index "==" (calc (calc (calc "floor" (count ../data.trauma.list)) "/" 2) "-" 1))}}
 				</div><div class="flex-horizontal">
 				{{/if}}
 			{{/each}}
@@ -178,9 +178,9 @@
 	<section class="harm-armor full-width">
 			<table class="shadowed">
 				<thead>
-					<th class="black-white" colspan="4">{{localize "BITD.Harm"}}</th>
-					<th class="black-white">{{localize "BITD.Healing"}}</th>
-					<th class="black-white">{{localize "BITD.Armor"}}</th>
+					<th colspan="4">{{localize "BITD.Harm"}}</th>
+					<th>{{localize "BITD.Healing"}}</th>
+					<th>{{localize "BITD.Armor"}}</th>
 				</thead>
 				<tbody>
 					<tr>
@@ -189,15 +189,15 @@
 							<input type="text" name="data.harm.heavy.one" value="{{data.harm.heavy.one}}">
 						</td>
 						<td class="harm-effect">{{localize "BITD.NeedHelp"}}</td>
-						<td class="healing-clock" rowspan="3">
-							<div class="char-health-clock">
-								<h1><center>(Clock TBD...)</center></h1>
-							</div>
+						<td class="healing-clock clock-container" rowspan="3">
+							{{> "systems/eunos-blades/templates/components/clock.hbs"
+								target="system.healing.value"
+								data=healing_clock
+							}}
 						</td>
 						<td class="armor-uses" rowspan="3">
-							<div>
-								<h1><center>(Armor TBD...)</center></h1>
-							</div>
+							{{> "systems/eunos-blades/templates/components/armor.hbs"
+								data=armor}}
 						</td>
 					</tr>
 					<tr>
@@ -222,60 +222,57 @@
 					</tr>
 				</tbody>
 			</table>
-		</div>
 	</section>
 
 	<div class="split-panel full-width">
 		{{!-- Navigable Tabs --}}
-		<section class="nav-group flex-vertical tab-content">
+		<section class="tab-content nav-group flex-vertical">
 				{{!-- Nav menu --}}
 				<nav class="nav-tabs flex-horizontal">
 					<a class="tab-selector" data-tab="abilities">{{localize "BITD.Abilities"}}</a>
 					<a class="tab-selector" data-tab="loadout">{{localize "BITD.Loadout"}}</a>
 					<a class="tab-selector" data-tab="character-notes">{{localize "BITD.Notes"}}</a>
 					{{#if isGM}}
-					<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
-					<a class="tab-selector" data-tab="effects">{{localize "BITD.Effects"}}</a>
-					<a class="tab-selector" data-tab="all-character-items">{{localize "BITD.AllItems"}}</a>
+						<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
+						<a class="tab-selector" data-tab="effects">{{localize "BITD.Effects"}}</a>
+						<a class="tab-selector" data-tab="all-character-items">{{localize "BITD.AllItems"}}</a>
 					{{/if}}
 				</nav>
 
 				{{!-- Abilities Tab --}}
-				<div id="character-{{actor._id}}-abilities" class="tab flex-vertical abilities" data-tab="abilities">
-					<div class="label-stripe">
-						<p><label>{{localize "BITD.Abilities"}}</label></p>
-						<p><a class="item-add-popup" data-item-type="ability"><i class="fas fa-plus-square"></i></a></p>
-					</div>
+				<div class="tab abilities flex-vertical" data-tab="abilities">
+					<label class="tab-label">
+						<span class="tab-title">{{localize "BITD.Abilities"}}</span>
+					</label>
 
-					<div id="character-{{actor._id}}-abilities-list">
-						{{#each actor.items as |item id|}}
+					{{#each actor.items as |item id|}}
 						{{#if (eq item.type "ability")}}
-						<div class="item flex-horizontal" data-item-id="{{item._id}}">
-							<div class="item-body flex-horizontal">
-								<div class="item-name">{{removeClassPrefix item.name}}</div>
-								<div class="item-description">{{{item.data.description}}}</div>
+							<div class="item flex-horizontal" data-item-id="{{item._id}}">
+								<div class="item-body flex-horizontal">
+									<div class="item-name">{{item.name}}</div>
+									<div class="item-description">{{{item.system.description}}}</div>
+								</div>
+								<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
+									<i class="fas fa-trash"></i>
+								</a>
 							</div>
-							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i
-									class="fas fa-trash"></i></a>
-						</div>
 						{{/if}}
-						{{/each}}
-					</div>
+					{{/each}}
 				</div>
 
 				{{!-- Loadout Tab --}}
-				<div id="character-{{actor._id}}-loadout" class="tab flex-vertical loadout" data-tab="loadout">
-					<div class="label-stripe flex-horizontal">
-						<p>{{localize "BITD.Loadout"}} <a class="item-add-popup" data-item-type="item"><i
-									class="fas fa-plus-square"></i></a></p>
-						<p><span class="load-amount">{{data.loadout}}</span><span class="load-level">{{localize
-								data.load_level}}</span></p>
-						<div class="dropdown">
-							<select name="data.selected_load_level">
-								{{selectOptions load_levels selected=data.selected_load_level localize=true}}
-							</select>
-						</div>
-					</div>
+				<div class="tab loadout flex-vertical" data-tab="loadout">
+					<label class="tab-label">
+						<span class="tab-title">{{localize "BITD.Loadout"}}</span>
+						<a class="item-add-popup" data-item-type="item">
+							<i class="fas fa-plus-square"></i>
+						</a>
+						<span class="load-amount">{{loadData.curLoad}}</span>
+						<span class="load-level">{{localize loadData.curLoadLevel}}</span>
+						<select name="data.loadout.selected">
+							{{selectOptions loadData.selections selected=loadData.selLoadLevel localize=true}}
+						</select>
+					</label>
 					<div>
 						{{#each actor.items as |item id|}}
 						{{#if (eq item.type "item")}}
@@ -285,8 +282,9 @@
 								<div class="item-name">{{removeClassPrefix item.name}}</div>
 								<div class="item-description">{{{item.data.description}}}</div>
 							</div>
-							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i
-									class="fas fa-trash"></i></a>
+							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
+								<i class="fas fa-trash"></i>
+							</a>
 						</div>
 						{{/if}}
 						{{/each}}
@@ -294,51 +292,56 @@
 				</div>
 
 				{{!-- Description & Notes Tab --}}
-				<div class="tab flex-vertical character-notes" data-tab="character-notes">
-					<div class="label-stripe">
-						<p>Description</p>
-					</div>
+				<div class="tab character-notes flex-vertical" data-tab="character-notes">
+					<label class="tab-label">
+						<span class="tab-title">Description</span>
+					</label>
 					{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-					<div class="label-stripe">
-						<p>{{localize "BITD.Notes"}}</p>
-					</div>
+
+					<label class="tab-label">
+						<span class="tab-title">{{localize "BITD.Notes"}}</span>
+					</label>
 					{{editor content=data.notes target="data.notes" button=true owner=owner editable=editable}}
 				</div>
 
+				{{!-- GM-ONLY TABS --}}
 				{{#if isGM}}
-				{{!-- GM Notes Tab --}}
-				<div class="tab flex-vertical gm-notes" data-tab="gm-notes">
-					<div class="label-stripe">
-						<p>GM Notes</p>
-					</div>
-					{{editor content=data.gm_notes target="data.gm_notes" button=true owner=owner editable=editable}}
-				</div>
 
-				{{!-- Active Effects Tab --}}
-				<div id="character-{{actor._id}}-effects" class="tab flex-vertical effects" data-tab="effects">
-					<div class="label-stripe">
-						<p>{{localize "BITD.Effects"}}</p>
+					{{!-- GM Notes Tab --}}
+					<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
+						<label class="tab-label">
+							<span class="tab-title">GM Notes</span>
+						</label>
+						{{editor content=data.gm_notes target="data.gm_notes" button=true owner=owner editable=editable}}
 					</div>
-					{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
-				</div>
 
-				{{!-- Full Item List Tab --}}
-				<div class="tab grow-two flex-vertical all-items" data-tab="all-character-items">
-					<div class="label-stripe">
-						<p><label>{{localize "BITD.AllItems"}}</label></p>
+					{{!-- Active Effects Tab --}}
+					<div class="tab effects flex-vertical" data-tab="effects">
+						<label class="tab-label">
+							<span class="tab-title">{{localize "BITD.Effects"}}</span>
+						</label>
+						{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
 					</div>
-					{{#each actor.items as |item id|}}
-					<div class="item flex-horizontal" data-item-id="{{item._id}}">
-						<div class="item-body item-sheet-open flex-horizontal">
-							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-							<div class="item-name">{{removeClassPrefix item.name}}</div>
+
+					{{!-- Full Item List Tab --}}
+					<div class="tab all-items flex-vertical" data-tab="all-character-items">
+						<label class="tab-label">
+							<span class="tab-title">{{localize "BITD.AllItems"}}</span>
+						</label>
+						{{#each actor.items as |item id|}}
+						<div class="item flex-horizontal" data-item-id="{{item._id}}">
+							<div class="item-body item-sheet-open flex-horizontal">
+								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+								<div class="item-name">{{item.name}}</div>
+							</div>
+							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
+								<i class="fas fa-trash"></i>
+							</a>
 						</div>
-						<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i
-								class="fas fa-trash"></i></a>
+						{{/each}}
 					</div>
-					{{/each}}
-				</div>
 				{{/if}}
+
 		</section>
 
 		<section class="action-ratings flex-vertical">
