--- a/scss/sheets/_pc-sheet.scss
+++ b/scss/sheets/_pc-sheet.scss
@@ -268,29 +268,123 @@
 						color: var(--blades-white-bright);
 						text-align: right;
 					}
-				}
-			}
-		}
 
-		.character-harm {
-			table {
-				tr {
-					background-color: rgba(255, 255, 255, 0.05);
+					.healing-clock {
+						padding: 0 toRem(10px);
+						width: 120px;
+						--clock-frame-size: 80px;
+						--clock-glow-size: calc(var(--clock-frame-size) * 3);
+						--clock-glow-correction: -80px;
+					}
 
-					&:nth-child(2) {
-						background-color: rgba(255, 255, 255, 0.1);
+					.armor-uses {
+						padding: 0 toRem(10px);
+						width: 100px;
+						.char-armor {
+							position: relative;
+							height: 100px;
+							width: 100px;
+							pointer-events: none;
+
+							.main-armor-control,
+							.special-armor-control {
+								position: absolute;
+								pointer-events: auto;
+
+								&.main-armor-control {
+									z-index: 1;
+
+									height: 100%;
+									width: 100%;
+									top: 0px;
+									left: 0px;
+								}
+
+								&.special-armor-control {
+									z-index: 2;
+
+									height: 50%;
+									width: 50%;
+									right: 0px;
+									bottom: 0px;
+								}
+							}
+
+							.main-armor-control + .special-armor-control {
+								display: none;
+							}
+
+							.svg-armor {
+								position: absolute;
+								height: 100px;
+								width: 100px;
+								top: 0;
+								left: 0;
+								pointer-events: auto;
+
+								svg {
+									height: 100%;
+									width: auto;
+								}
+
+								fill: var(--blades-black-dark);
+								stroke: var(--blades-white);
+								stroke-width: 10px;
+								stroke-linejoin: bevel;
+								stroke-miterlimit: 10;
+
+								&.checked {
+									fill: none;
+									stroke: var(--blades-grey-bright);
+									opacity: 0.5;
+									filter: blur(1px);
+								}
+
+								&.armor-light {
+									transform: scale(1.1);
+								}
+
+								&.armor-special {
+									height: 75px;
+									width: auto;
+									top: 12.5px;
+									left: 12.5px;
+									stroke: none;
+
+									.specialBg {
+										fill: var(--blades-black-dark);
+									}
+									.special {
+										fill: var(--blades-white);
+									}
+
+									&.checked {
+										.specialBg {
+											fill: var(--blades-grey-dark);
+										}
+										.special {
+											fill: var(--blades-grey-bright);
+										}
+									}
+								}
+							}
+
+							.svg-armor.armor-heavy:not(.checked) + .svg-armor.armor-light {
+								display: none;
+							}
+
+							.svg-armor ~ .svg-armor.armor-special {
+								height: 50px;
+								width: auto;
+								top: unset;
+								left: unset;
+								right: -10px;
+								bottom: 0;
+							}
+						}
 					}
 				}
-
-				input[type="text"] {
-					font-family: var(--font-decorative);
-					font-style: italic;
-					font-size: 16px;
-					text-indent: 5px;
-					padding: 5px 0 0;
-				}
 			}
-
 		}
 	}
 
